Import Vue as ES module

--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>connecc4</title>
-
-        <!-- development version -->
-        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     </head>
 
 
@@ -101,6 +98,6 @@
             </svg>
         </div>
 
-        <script src="index.js"></script>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
